# mosses

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  model_configuration.yaml  pyproject.toml
drafts/: ModelImpacts_UtilityFunctions.py  ProjectSpecificModelEvaluation.ipynb  ProjectSpecificModelEvaluation_SeriesBased.ipynb  model_attributes.yaml
examples/: heatmap.ipynb  mpo_example.ipynb  multi_model_validation.ipynb  simple_model_validation.ipynb
examples/data/: heatmap_model_configuration.json  logd_validation_1.csv  logd_validation_1.yaml  mpo_example.csv  multi_objective_validation_1.csv
src/: ModelImpacts_UtilityFunctions.py  __init__.py  functions.py  model_impacts.py
src/core/: evaluator.py  helpers.py  metrics.py  plotter.py
src/mosses/: __init__.py  heatmap.py  mpo.py  predictive_validity.py
src/mosses/core/: evaluator.py  helpers.py  metrics.py  plotter.py
src/mosses/core/mpo/: __init__.py  feature_selection.py  ml_estimators.py  optimizers.py  plotter.py  scoring.py  statistics.py  weights.py
