[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosses"
version = "0.3.3"
description = "Set of functionalities to assess molecular property prediction models."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Vigneshwari Subramanian", email = "vignesh.bioinfo@gmail.com"},
    {name = "Gian Marco Ghiandoni", email = "ghiandoni.g@gmail.com"}
]
license = {text = "Apache v2.0"}
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "colorama",
    "seaborn",
    "pyyaml",
    "statsmodels",
    "jinja2",
    "imbalanced-learn",
    "pygad>=3.0",
    "matplotlib-venn"
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
]
